--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,60 @@
+* {
+    font-family: "PT Serif", serif;
+}
+
 html {
     position: relative;
 }
 
 body {
+    margin: 0;
+    padding: 0;
+}
+
+.home {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.home .name {
+    font-size: 100px;
+    font-weight: 1000;
+    font-style: normal;
+}
+
+.home .judul {
+    font-size: 25px;
+    font-style: normal;
+    color: #98ad92;
+}
+
+.home .content {
+    font-size: 15px;
+}
+
+.judul-h3 {
+    color: #98ad92;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+.about {
+    background-color: #fffae6;
+}
+
+.skils {
+    background-color: #fff;
+    margin: 100px;
+}
+
+.portfolio {
     margin-bottom: 100px;
-    margin-top: 30px;
-}
-
-.jumbotron{
-    background-image: url('../img/header-bg2.png');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: 0 -100px;
-    color: white;
-    box-shadow: px 1px 10px rgba(0,0,0,0.5);
-}
-
-.jumbotron img{
-    width: 200px;
-    border: 5px solid rgb(0, 0, 0);
-}
-
-.jumbotron h1 , .jumbotron p {
-    text-shadow: 1px 1px 10px rgba(0,0,0,0.5);
-}
-
-hr {
-    width: 250px;
-    border-top: 3px solid #999;
-}
-
-section{
-    min-height: 400px;
-}
-
-.portfolio{
-    background-color: #eee;
+    background-color: #fffae6;
 }
 
 .contact {
+    background-color: #fff;
     min-height: 800px;
 }
 
@@ -47,11 +63,214 @@ footer {
     bottom: 0;
     width: 100%;
     height: 100px;
-    background-color: #333;
-    padding-top: 30px;
+    background-color: #98ad92;
+    padding-top: 10px;
 }
 
 footer p {
     color: #aaa;
     font-size: 0.9em;
+}
+
+.list-skill li {
+    margin-left: 0;
+    margin-top: 10px;
+    font-size: 30px;
+    color: #98ad92;
+    list-style: none;
+}
+
+@media only screen and (max-width: 2000px) {
+    .judul-skil {
+        margin: 25px;
+        color: #fff;
+        font-size: 60px;
+        font-weight: 700;
+    }
+
+    .home img {
+        margin-right: 200px;
+        width: 353px;
+    }
+
+    .image-about {
+        width: 746px;
+    }
+
+    .img-container {
+        position: relative;
+        width: 400px;
+        height: 750px;
+    }
+
+    .img_1 {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 250px;
+        width: 500px;
+    }
+
+    .img_2 {
+        position: absolute;
+        z-index: 1;
+        top: 150px;
+        left: 50px;
+        width: 500px;
+    }
+
+    .img_3 {
+        position: absolute;
+        z-index: 2;
+        top: 350px;
+        left: 200px;
+        width: 500px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .img-container {
+        margin-top: 30px;
+        position: relative;
+        height: 550px;
+    }
+
+    .img_1 {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 100px;
+        width: 450px;
+    }
+
+    .img_2 {
+        position: absolute;
+        z-index: 1;
+        top: 150px;
+        left: -100px;
+        width: 450px;
+    }
+
+    .img_3 {
+        position: absolute;
+        z-index: 2;
+        top: 300px;
+        left: 120px;
+        width: 450px;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .judul-skil {
+        writing-mode: vertical-lr;
+        transform: rotate(360deg);
+        text-orientation: upright;
+        color: #fff;
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    .home img {
+        width: 150px;
+        margin-right: 100px;
+    }
+
+    .home .name {
+        font-size: 60px;
+    }
+
+    .image-about {
+        width: 100%;
+    }
+
+    .img-container {
+        margin-top: 30px;
+        position: relative;
+        width: 400px;
+        height: 350px;
+    }
+
+    .img_1 {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 160px;
+        width: 250px;
+    }
+
+    .img_2 {
+        position: absolute;
+        z-index: 1;
+        top: 100px;
+        left: 50px;
+        width: 250px;
+    }
+
+    .img_3 {
+        position: absolute;
+        z-index: 2;
+        top: 200px;
+        left: 120px;
+        width: 250px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .judul-skil {
+        writing-mode: vertical-lr;
+        transform: rotate(360deg);
+        text-orientation: upright;
+        color: #fff;
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    .home img {
+        width: 150px;
+        margin-right: 0;
+    }
+
+    .home .name {
+        font-size: 55px;
+    }
+
+    .image-about {
+        width: 100%;
+    }
+
+    .list-skill li {
+        font-size: 27px;
+    }
+
+    .img-container {
+        margin-top: 30px;
+        position: relative;
+        width: 400px;
+        height: 350px;
+    }
+
+    .img_1 {
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 160px;
+        width: 250px;
+    }
+
+    .img_2 {
+        position: absolute;
+        z-index: 1;
+        top: 100px;
+        left: 50px;
+        width: 250px;
+    }
+
+    .img_3 {
+        position: absolute;
+        z-index: 2;
+        top: 200px;
+        left: 120px;
+        width: 250px;
+    }
 }
